--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
 </head>
 
 <body>
+<form>
+    <div>
+        <label for= "a">a:</label>
+        <input type="number" id="a" name="a" />
+        <p>x^2</p>
+    </div>
+    <div>
+        <label for="b">b:</label>
+        <input type="number" id="b" name="b" />
+        <p>x</p>
+    </div>
+    <div>
+        <label for= "c">c:</label>
+        <input type="number" id="c" name="c" />
+    </div>
+        <input type="button" id="vypocet" value="vypocitej" onclick="Calculate()" />
+
+        <label id="x1" name="x1"></label>
+        
+        <p>x1</p>
+        <label id="x2" name="x2"></label>
+        
+        <p>x2</p>
+
+</form>
+
 </body>
 
 </html>
